--- a/.github/workflows/killerx.yml
+++ b/.github/workflows/killerx.yml
@@ -28,7 +28,7 @@ jobs:
          continue-on-error: true
          run: |
            git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} killerx-music
-       - name: Running Ultroid
+       - name: Running KillerX-Music
          timeout-minutes: 350
          continue-on-error: true
          run: |
