--- a/.github/workflows/killerx.yml
+++ b/.github/workflows/killerx.yml
@@ -27,7 +27,7 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} killerx-music
+           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} TeamKillerX
        - name: Running KillerX-Music
          timeout-minutes: 350
          continue-on-error: true
