--- a/.github/workflows/Yukki.yml
+++ b/.github/workflows/Yukki.yml
@@ -27,8 +27,8 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} TeamKillerX
-       - name: Running KillerX-Music
+           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} TeamYukki
+       - name: Running YukkiMusic
          timeout-minutes: 350
          continue-on-error: true
          run: |
