--- a/.github/workflows/Yukki.yml
+++ b/.github/workflows/Yukki.yml
@@ -28,7 +28,7 @@ jobs:
          continue-on-error: true
          run: |
            git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} gsweq11
-       - name: Running yukkimusicbot
+       - name: Running yukkimusic
          timeout-minutes: 350
          continue-on-error: true
          run: |
