--- a/.github/workflows/Yukki.yml
+++ b/.github/workflows/Yukki.yml
@@ -27,7 +27,7 @@ jobs:
        - name: cloning repo
          continue-on-error: true
          run: |
-           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} YukkiMusicBot
+           git clone https://${{ secrets.GitHubName }}:${{ secrets.GH_TOKEN }}@${{ secrets.CREDS }} yukkimusicbot
        - name: YukkiMusicBot
          timeout-minutes: 350
          continue-on-error: true
