--- a/.github/workflows/yukkimusicbot.yml
+++ b/.github/workflows/yukkimusicbot.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
        - name: Checkout
-         uses: actions/checkout@main
+         uses: actions/checkout@master
        
        - uses: styfle/cancel-workflow-action@0.9.0
          name: "Cancel duplicate workflow runs"
